--- a/index.html
+++ b/index.html
@@ -1,31 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Polling App</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet"/>
-</head>
-<body data-ng-app="pollingApp">
-	<div class="main-ui-view" data-ui-view></div>
-
-<script src="http://localhost:4000/socket.io/socket.io.js"></script>
-<script src="node/socket.js"></script>
-<script src='lib/jquery-2.0.3.min.js'></script>
-<script src='lib/angular.min.js'></script>
-<script src='lib/angular-route.min.js'></script>
-<script src='lib/angular-resource.min.js'></script>
-<script src='lib/angular-cookie.js'></script>
-<script src='lib/angular-ui-router.js'></script>
-<script src='lib/ui-bootstrap-tpls-0.7.0.min.js'></script>
-
-<!-- Routes and config-->
-<script src="js/app.js"></script>
-
-<!-- Controllers -->
-<script src="js/controllers/PollsController.js"></script>
-
-<!-- Directives -->
-<script src="js/directives/dynamicFields.js"></script>
-
-</body>
-</html>
+<!doctype html><!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]--><!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]--><!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]--><!--[if gt IE 8]><!--><html lang="en" class="no-js"><!--<![endif]--><head><meta charset="utf-8"><title></title><meta name="description" content=""><meta name="viewport" content="width=device-width"><!-- Place favicon.ico and apple-touch-icon.png in the root directory --><link rel="stylesheet" href="styles/cd367326.vendor.css"><link rel="stylesheet" href="styles/5a3706b1.main.css"><link rel="stylesheet" href="styles/style.css"><body ng-app="vouchedForApp"><!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]--><!-- Add your site or application content here --><div class="container" ng-view=""></div><!--[if lt IE 9]>
+    <script src="bower_components/es5-shim/es5-shim.js"></script>
+    <script src="bower_components/json3/lib/json3.min.js"></script>
+    <![endif]--><script src="scripts/dea1750d.vendor.js"></script><script src="scripts/2430c1a4.scripts.js"></script>
